[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/Menu_background.png" type="Texture" id=1]
[ext_resource path="res://sprites/Botao dourado.png" type="Texture" id=2]
[ext_resource path="res://audios/videoplayback.mp3" type="AudioStream" id=3]
[ext_resource path="res://Fonte/upheaval/upheavtt.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/titulo.png" type="Texture" id=5]
[ext_resource path="res://cenas de transicao/Transicao.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/scripts/menu/Menu.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 160, 149 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 160, 149 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 160, 149 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 160, 149 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 2.01
} ]

[sub_resource type="DynamicFont" id=8]
size = 35
outline_size = 1
font_data = ExtResource( 4 )

[node name="Menu" type="Node2D"]
scale = Vector2( 5.62219, 2.07408 )
script = ExtResource( 7 )

[node name="CanvasLayer" parent="." instance=ExtResource( 6 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 32.016, 153.08 )
scale = Vector2( 0.0615692, 0.197979 )
texture = ExtResource( 1 )

[node name="Botões" type="Node" parent="."]

[node name="Composição menu" type="Node" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="Composição menu"]
visible = false
position = Vector2( 180, 147 )
scale = Vector2( 2.15375, 2.07166 )
frames = SubResource( 7 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 124.0
margin_right = 208.0
margin_bottom = 195.0
rect_scale = Vector2( 0.181918, 0.512521 )
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="TextureButton"]
margin_left = 25.421
margin_top = 15.993
margin_right = 176.421
margin_bottom = 48.9935
custom_colors/font_color = Color( 0.32549, 0.345098, 0.352941, 1 )
custom_fonts/font = SubResource( 8 )
text = "Começar"

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 171.0
margin_right = 208.0
margin_bottom = 241.0
rect_scale = Vector2( 0.182, 0.513 )
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="TextureButton3"]
margin_left = 30.0
margin_top = 15.0
margin_right = 154.0
margin_bottom = 84.0
custom_colors/font_color = Color( 0.32549, 0.345098, 0.352941, 1 )
custom_fonts/font = SubResource( 8 )
text = "Ajuste
"

[node name="TextureButton4" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 219.0
margin_right = 208.0
margin_bottom = 287.0
rect_scale = Vector2( 0.182, 0.513 )
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="TextureButton4"]
margin_left = 30.296
margin_top = 16.9172
margin_right = 158.296
margin_bottom = 85.9172
custom_colors/font_color = Color( 0.32549, 0.345098, 0.352941, 1 )
custom_fonts/font = SubResource( 8 )
text = "prêmio
"

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="TextureButton4" to="." method="_on_TextureButton4_pressed"]
